# zeno

./: Improvemts.md  README.md
.gitcms/: README.md  config.json
.gitcms/content/: .gitkeep
.gitcms/media/: .gitkeep
.gitcms/schemas/: .gitkeep  blog-post.json  page.json  product.json  project.json
backend/: Plan.md  config.py  downloader.py  main.py  pyproject.toml  whisper-test.py
backend/chroma_db/: chroma.sqlite3
backend/controllers/: video_router.py
backend/models/: schemas.py
backend/repositories/: mongo_repo.py
backend/scratch/: test_agent.py  test_downloader.py  test_llm.py
backend/services/: agent_service.py  chat_service.py  import_service.py  llm_service.py  rag_service.py
frontend/: package-lock.json  package.json
frontend/app/: ClientVideoAnswerEngine.tsx  globals.css  layout.tsx  page.tsx
frontend/app/controllers/: useVideoEngine.ts
frontend/app/services/: api.ts
frontend/app/workspaces/[workspaceId]/: page.tsx
frontend/components/: ClientVideoAnswerEngine.tsx  GlobalSearchChat.tsx  ImportModal.tsx  Modal.tsx  Navbar.tsx  NewWorkspaceModal.tsx  WorkspaceCard.tsx  WorkspaceNavbar.tsx
frontend/hooks/: WorkspaceContext.tsx  useVideoEngine.ts
frontend/lib/: mockData.ts
frontend/services/: api.ts
frontend/types/: index.ts
