[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.43.0",
    "yt-dlp>=2026.3.17",
]
