[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
    "uvicorn>=0.43.0",
    "yt-dlp[default]>=2026.3.17",
    "chromadb>=0.6.3",
    "sentence-transformers>=3.4.1",
    "langgraph>=1.1.10",
    "httpx>=0.28.1",
]
